--- a/index.html
+++ b/index.html
@@ -13,8 +13,28 @@
             .attr("width", 500)
             .attr("height", 500);
 
+        flowers = ["桃花", "李花", "樱花", "杏花", "梨花", "梅花", "海棠"]
+
+        var flower_score = {}
+
+        function update_flower_score() {
+            for (var i = 0; i < flowers.length; i++) {
+                var flower = flowers[i];
+                var score = Math.floor(Math.random() * 500 + 10);
+                flower_score[flower] = score;
+            }
+            console.log(flower_score)
+        }
+        update_flower_score();
+
+
+
         // create an array of values
-        var values = [10, 20, 30, 40, 50];
+        var values = Object.values(flower_score);
+
+        var xScale = d3.scaleLinear()
+            .domain([0, values.length - 1])
+            .range([450, 50]);
 
         // create a scale for the y position of the circles
         var yScale = d3.scaleLinear()
@@ -26,94 +46,10 @@
             .domain([0, d3.max(values)])
             .range([10, 40]);
 
-        // create a color scale for the fill of the circles
-        var colorScale = d3.scaleOrdinal()
-            .domain(values)
-            .range(d3.schemeCategory10);
-
-        // bind the data to the circles
-        // var circles = svg.selectAll("circle")
-        //     .data(values)
-        //     .enter()
-        //     .append("circle")
-        //     .attr("cx", function (d, i) {
-        //         return (i + 1) * 80; // set the x position based on the index
-        //     })
-        //     .attr("cy", function (d) {
-        //         return yScale(d); // set the y position based on the value
-        //     })
-        //     .attr("r", function (d) {
-        //         return rScale(d); // set the radius based on the value
-        //     })
-        //     .attr("fill", function (d) {
-        //         return colorScale(d); // set the fill based on the value
-        //     });
-
-        // create a function to update the data and redraw the circles
-        // function update() {
-        //     // generate new random values
-        //     values = values.map(function () {
-        //         return Math.floor(Math.random() * 50 + 10);
-        //     });
-
-        //     // update the y scale domain
-        //     yScale.domain([0, d3.max(values)]);
-
-        //     // update the circles with new data
-        //     circles.data(values)
-        //         .transition() // add a transition for smooth animation
-        //         .duration(1000) // set the duration of the transition
-        //         .attr("cy", function (d) {
-        //             return yScale(d); // update the y position based on the new value
-        //         })
-        //         .attr("r", function (d) {
-        //             return rScale(d); // update the radius based on the new value
-        //         })
-        //         .attr("fill", function (d) {
-        //             return colorScale(d); // update the fill based on the new value
-        //         });
-        // }
-        // call the update function every 2 seconds
-        // setInterval(update, 2000);
-        // update()
-        // flowers = [
-        //     {
-        //         "name": "桃花",
-        //     },
-        //     {
-        //         "name": "李花",
-        //     },
-        //     {
-        //         "name": "樱花",
-        //     },
-        //     {
-        //         "name": "杏花",
-        //     },
-        //     {
-        //         "name": "梨花",
-        //     },
-        //     {
-        //         "name": "梅花",
-        //     },
-        //     {
-        //         "name": "海棠",
-        //     },
-        // ]
-
-        flowers = ["桃花", "李花", "樱花", "杏花", "梨花", "梅花", "海棠"]
-
-        var flower_score = {}
-
-        function update_flower_score() {
-            for (var i = 0; i < flowers.length; i++) {
-                var flower = flowers[i];
-                // generate a random score between 10 and 59
-                var score = Math.floor(Math.random() * 50 + 10);
-                // assign the score to the flower in the object
-                flower_score[flower] = score;
-            }
-            console.log(flower_score)
-        }
+        // // create a color scale for the fill of the circles
+        // var colorScale = d3.scaleOrdinal()
+        //     .domain(values)
+        //     .range(d3.schemeCategory10);
 
         function getName(d) {
             return d[0];
@@ -123,88 +59,105 @@
         }
 
 
-        update_flower_score();
         // update the circles with new data
         var groups = svg.selectAll("g")
-            .data(Object.entries(flower_score))
-
+            .data(Object.entries(flower_score), getName)
             .enter()
             .append("g")
-
             .attr("transform", function (d, i) {
-                return "translate(" + ((i + 1) * 80) + "," + yScale(getScore(d)) + ")"; // set the position based on the index and value
+                return "translate(" + xScale(i) + "," + yScale(getScore(d)) + ")";
             });
 
-        // append a circle to each group
-        // groups.append("circle")
-        //     .attr("r", function (d) {
-        //         return rScale(d); // set the radius based on the value
-        //     })
-        //     .attr("fill", function (d) {
-        //         return colorScale(d); // set the fill based on the value
-        //     });
+        groups.append("defs")
+            .append("pattern") // Append a pattern element to the defs
+            .attr("id", function (d) {
+                return `images-${getName(d)}`
+            }) // Set the id attribute
+            .attr("x", "0%") // Set the x attribute
+            .attr("y", "0%") // Set the y attribute
+            .attr("height", "100%") // Set the height attribute
+            .attr("width", "100%") // Set the width attribute
+            .attr("viewBox", "0 0 512 512") // Set the viewBox attribute
+            .append("image") // Append an image element to the pattern
+            .attr("x", "0%") // Set the x attribute
+            .attr("y", "0%") // Set the y attribute
+            .attr("preserveAspectRatio", "xMidYMid slice")
+            .attr("width", "512") // Set the width attribute
+            .attr("height", "512") // Set the height attribute
+            .attr("xlink:href", function (d) {
+                return `assets/images/${getName(d)}.jpg`
+            }); // Set the xlink:href attribute to the image url
 
-        // append an image to each group
-        images = groups.append("image")
 
-            .attr("xlink:href", function (d, i) {
-                return `assets/images/${getName(d)}.jpg`; // set the image source based on the index
-            })
-            .attr("x", function (d) {
-                return -rScale(getScore(d)); // set the x position based on the radius
-            })
-            .attr("y", function (d) {
-                return -rScale(getScore(d)); // set the y position based on the radius
-            })
-            .attr("width", function (d) {
-                return rScale(getScore(d)) * 2; // set the width based on the radius
-            })
-            .attr("height", function (d) {
-                return rScale(getScore(d)) * 2; // set the height based on the radius
-            })
-            .attr("border-radius", function (d) {
-                return "50%";
-            });
+        // For each group, create a circle filled with the corresponding pattern
+        circles = groups.append("circle") // Append a circle element to each group
+            // .attr("cx", function (d) { return d.x; }) // Set the cx attribute based on the data x property
+            // .attr("cy", function (d) { return d.y; }) // Set the cy attribute based on the data y property
+            .attr("r", function (d) { return rScale(getScore(d)); }) // Set the r attribute based on the data r property
+            .attr("fill", function (d) {
+                return `url(#images-${getName(d)})`;
+            }) // Set the fill attribute to use the pattern with the same id as the image name
+            .attr("stroke", "lightblue") // Set the stroke attribute to lightblue
+            .attr("stroke-width", "0.5%"); // Set the stroke-width attribute to 0.5%
+
 
         // append a text to each group
-        groups.append("text")
-            .attr("dx", -5) // set a small offset for better alignment
+        texts = groups.append("text")
+            .attr("dy", function (d) {
+                return rScale(getScore(d)) * 1.2;
+            })
+            .attr("text-anchor", "middle")
+            .attr("alignment-baseline", "middle")
             .text(function (d, i) {
                 return getName(d); // set the text content based on the index
             })
-            .style("fill", "white") // set the text color to white
-            .style("font-size", "20px"); // set the text size to 20px
+            .style("fill", "darkblue")
+            .style("font-weight", "bolder")
+            .style("stroke", "white")
+            .style("stroke-width", "0.5px")
+            .style("font-size", function (d) {
+                return rScale(getScore(d));
+            });
 
         function update() {
             update_flower_score();
-            groups.data(Object.entries(flower_score))
-                .transition()
-                .duration(1000)
 
-                .attr("transform", function (d, i) {
-                    return "translate(" + ((i + 1) * 80) + "," + yScale(getScore(d)) + ")"; // set the position based on the index and value
-                });
-            images.data(Object.entries(flower_score))
+
+            var values = Object.values(flower_score);
+
+            var xScale = d3.scaleLinear()
+                .domain([0, values.length - 1])
+                .range([450, 50]);
+
+            // create a scale for the y position of the circles
+            var yScale = d3.scaleLinear()
+                .domain([0, d3.max(values)])
+                .range([450, 50]);
+
+            // create a scale for the radius of the circles
+            var rScale = d3.scaleSqrt()
+                .domain([0, d3.max(values)])
+                .range([10, 40]);
+
+            groups.data(Object.entries(flower_score), getName)
                 .transition()
                 .duration(1000)
-                .attr("xlink:href", function (d, i) {
-                    return `assets/images/${getName(d)}.jpg`; // set the image source based on the index
-                })
-                .attr("x", function (d) {
-                    return -rScale(getScore(d)); // set the x position based on the radius
-                })
-                .attr("y", function (d) {
-                    return -rScale(getScore(d)); // set the y position based on the radius
-                })
-                .attr("width", function (d) {
-                    return rScale(getScore(d)) * 2; // set the width based on the radius
-                })
-                .attr("height", function (d) {
-                    return rScale(getScore(d)) * 2; // set the height based on the radius
-                })
-                .attr("border-radius", function (d) {
-                    return "50%";
+                .attr("transform", function (d, i) {
+                    return "translate(" + xScale(i) + "," + yScale(getScore(d)) + ")";
                 });
+
+
+            circles.data(Object.entries(flower_score), getName)
+                .transition()
+                .duration(1000)
+                .attr("r", function (d) { return rScale(getScore(d)); }) // Set the r attribute based on the data r property
+                .attr("fill", function (d) {
+                    return `url(#images-${getName(d)})`;
+                }) // Set the fill attribute to use the pattern with the same id as the image name
+                .attr("stroke", "lightblue") // Set the stroke attribute to lightblue
+                .attr("stroke-width", "0.5%"); // Set the stroke-width attribute to 0.5%
+
+
         }
         setInterval(update, 2000);
     </script>
